readme file: formatting of tables